Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.12.0
-
Fix Version/s: 5.12.2, 5.14.0 Alpha
-
Component/s: Quick: Mouse Touch and Tablet input
-
Labels:None
-
Environment:Windows 10 laptop with touchscreen
-
Platform/s:
-
Commits:850858cce6191593aaab3176932bc04a6f97f202 (qt/qtbase/5.12)
Description
After dragging a QML item via a desktop touchscreen, the next time you touch the screen the app crashes.
Steps to reproduce:
- Use the attached Qt Creator project, with the "Desktop Qt 5.12.0 MSVC2017 64bit" kit. This project is just the "Qt Quick Empty Project" project template, with no modifications except for inserting this in main.qml:
Rectangle { width: 20 height: 20 color: "#ff0000" Drag.active: mouseArea.drag.active Drag.dragType: Drag.Automatic MouseArea { id: mouseArea anchors.fill: parent drag.target: parent } }
- Drag the red square a few times with your finger.
Result:
Access violation on 0x0000000000000084.
Attachments
Issue Links
- resulted from
-
QTBUG-60437 add full-featured Windows Ink support: generate QTabletEvents
-
- Closed
-